[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
coinstr-core = { git = "https://github.com/coinstr/coinstr", rev = "7cd35279eb7dab5420373eefbc301cdac2f8cb53" }
wasm-bindgen-futures = "0.4.36"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.63"
thiserror = "1.0"
async-trait = "0.1.68"
serde = "1.0.164"

[build]
target = "wasm32-unknown-unknown"
